# netbox_plugin_hardware_onboarding

./: NOTICE  README.md  pyproject.toml  tasks.py
development/: base_configuration.py  docker-compose.yml
netbox_hardware_onboarding/: __init__.py
netbox_hardware_onboarding/textfsm_templates/: cisco_diag_all_eeprom.template  cisco_inventory.template  juniper_chassis_hardware.template
